--- a/labs/lab04.ipynb
+++ b/labs/lab04.ipynb
@@ -800,7 +800,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Respuesta__: 1"
+    "__Respuesta__: Mas de 5, no esperaba esta pregunta, pero la verdad me dio tanta risa que se lo mandé a mi polola para que se riera conmigo kjasgbjkagsb"
    ]
   }
  ],
